Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.9.7 (unreleased)

   Bugs fixed

      - Reverted backward-incompatible fix for Collector #2191.

      - added Python 2.4.4 as optimal Python version to 'configure'


  Zope 2.9.6 (2006-11-22)

   Bugs fixed

      - Collector #2191: extended DateTime parser for better support
        to the ISO8601 specification.

      - Reworking of _cached_result in Shared.DC.ZRDB.DA.DA:

        - fixed KeyError reported in Collector #2212

        - fixed two memory leaks that occurred under high load

        - fixed broken cache keys for people using the obscure
          Shared.DC.ZRDB.DA.DA.connection_hook

        - fixed incorrect cache ordering resulting in newer results
          being dumped when the cache became too large.

      - Collector #2237: 'make' doesn't tell you to run 'make inplace'
        before running 'make instance'.

      - Collector #2235: A number of ZCatalog methods were doing boolean
        evaluation of objects that implemented __len__ instead of checking
        them against None. Replaced a number of "if not obj" with
        "if obj is None".

      - Collector #2218: fixed wrong logger argument in OFS/Cache.py

      - Collector #2205: fixed wrong logger argument in ZRDB/Connection.py

      - Collector #2208: rewriting/setting the 'charset' part of the
        content-type HTTP header will be done only for 'text/*'

      - Collector #2206: Set PYTHONPATH to include existing PYTHONPATH
        in skel/bin/zopectl.in and skel/bin/runzope.in

  Zope 2.9.5 (2006/10/03)

   Bugs fixed

      - Call setDefaultSkin on new requests created as the result of
        ConflictError retries.

      - Collector #2189: Fix logging of errors during product refresh.

      - Collector #2185: Log username for FCGI requests.
