@@ -8,6 +8,9 @@ Zope Changes
 
    Bugs fixed
 
+      - Collector #2263: 'field2ulines' did not convert empty string
+        correctly.
+
       - Reverted backward-incompatible fix for Collector #2191.
 
       - added Python 2.4.4 as optimal Python version to 'configure'
